# AutoTrainer

./: .pdm-python  Dockerfile  Makefile  README.md  architecture.md  compose.yaml  config.yaml  pyproject.toml  run.py
.github/workflows/: test.yml
src/: __init__.py  cli.py  config.py
src/api/: app.py  models.py  routes.py
src/core/: job.py  queue.py
src/scheduler/: scheduler.py
src/worker/: worker.py
tests/: conftest.py
tests/unit/: test_basic.py
