[project]
name = "AutoTrainer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "ct_hsu@earthbook.xyz"},
]

requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
    "redis>=5.2.1",
    "rq>=2.1.0",
    "psutil>=7.0.0",
    "prometheus-client>=0.21.1",
    "requests>=2.32.3",
    "torch>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.10.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "fakeredis>=2.27.0",
]

test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "fakeredis>=2.27.0",
]

[tool.pdm.scripts]
start = "python -m src.api.app"
worker = "python -m src.worker.worker"
scheduler = "python -m src.scheduler.scheduler"
test = "pytest"
lint = "flake8 src tests"
format = "black src tests"
typecheck = "mypy src"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pdm]
package-dir = "src"
distribution = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["rq.*", "prometheus_client.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--strict-markers --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
